objects/DMAPP__DM_AM_Political_Map_Influence__c.object
<CustomObject>
    <description>DEPRECATED - DO NOT USE</description>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Influenced_Contact__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Influenced</label>
        <referenceTo>DMAPP__DM_AM_Political_Map_Contact__c</referenceTo>
        <relationshipName>Political_Map_Influences1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Influencing_Contact__c</fullName>
        <label>Influencer</label>
        <referenceTo>DMAPP__DM_AM_Political_Map_Contact__c</referenceTo>
        <relationshipName>Influences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Unit</label>
        <referenceTo>DMAPP__AM_Plan_Unit__c</referenceTo>
        <relationshipName>AM_Political_Map_Influences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZZ AM Political Map Influence</label>
    <nameField>
        <label>AM Political Map Influence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Political Map Influences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>